<resources>
    <string name="app_name">WNews</string>
    <string name="IMEI">IMEI: </string>
    <string name="version">Version: </string>
    <string name="permissionText">The app needs a permission to access your phone functions, because the app has to show you your device IMEI</string>
    <string name="permissionTitle">Explanation</string>
    <string name="noPermission">No permission</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name">Name: </string>
    <string name="nickname">Nickname: </string>
    <string name="email">Email: </string>
    <string name="emailWithoutColon">Email</string>
    <string name="phone">Phone: </string>
    <string name="fail">fail</string>
    <string name="change">Change</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="registration">Registration</string>
    <string name="nicknameWithoutColons">Nickname</string>
    <string name="confirmPassword">ConfirmPassword</string>
    <string name="add">Add</string>
    <string name="back">BaCk</string>
    <string name="sign_up">Sign up</string>
    <string name="about">About</string>
    <string name="my_account">My Account</string>
    <string name="news">News</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="please_enter_the_system">Please, enter the system</string>
    <string name="check_user_data">Check data user…</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="correct_mistakes">Correct the mistakes</string>
    <string name="fill_correctly_fields">Fill in the fields correctly</string>
    <string name="taken_email">Email is already taken, please choose another one</string>
    <string name="registration_user">Registration user…</string>
    <string name="equals_password">Passwords must be equal</string>
    <string name="OK">OK</string>
    <string name="select_gallery">Select photo from gallery</string>
    <string name="camera_permission">Permission for the camera is necessary to create a photo</string>
    <string name="create_photo">Create photo</string>
    <string name="photo">Photo</string>
    <string name="load_user">Load user…</string>
    <string name="save_data_message">Data has been changed, do you want to save it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="save">Save</string>
    <string name="info">i</string>
    <string name="sign_out">Sign out</string>
    <string name="emptyURL">Enter URL</string>
    <string name="containsURL">This URL already exists</string>
    <string name="not_correctURL">Enter correct URL</string>
    <string name="load_news">Load news</string>
</resources>
