<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/registrationLiner"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textSize="40sp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"/>
            <EditText
                style="@style/EditOnRegistrationAndLogin"
                android:id="@+id/editEmailRegistration"
                android:hint="@string/emailWithoutColon"
                android:inputType="textEmailAddress" />
            <EditText
                style="@style/EditOnRegistrationAndLogin"
                android:id="@+id/editNicknameRegistration"
                android:hint="@string/nicknameWithoutColons"
                android:inputType="text" />
            <EditText
                style="@style/EditOnRegistrationAndLogin"
                android:id="@+id/editPasswordRegistration"
                android:hint="@string/password"
                android:inputType="textPassword" />
            <EditText
                style="@style/EditOnRegistrationAndLogin"
                android:id="@+id/editConfPasswordRegistration"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registrationLiner"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAddUser"
                style="@style/ButtonOnLoginPage"
                android:text="@string/add" />

            <Button
                android:id="@+id/btnBackToLogin"
                android:text="@string/back"
                android:layout_marginTop="20dp"
                style="@style/ButtonOnLoginPage"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>